Fix issue with feature elements not appearing as a row and taking up too much space.  Change background-color of features section to match spec.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -77,6 +77,7 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
+  z-index: 5;
 }
 
 header .content {
@@ -209,6 +210,13 @@ header .mobile {
   padding: 1.25rem 7.25rem;
 }
 
+@media only screen and (max-width: 890px){
+  #sign-up-section{
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media only screen and (max-width: 760px) {
   #sign-up-section {
     align-items: center;
@@ -252,6 +260,11 @@ header .mobile {
 }
 
 /* Features Section */
+div#features-section {
+    display: flex;
+    background-color: rgb(234, 234, 234);
+}
+
 
 #features-section {
   display: flex;
